Bug 43569 - Fileopen: Conditional field from .DOC write-protected, cannot be edited or deleted
Summary: Fileopen: Conditional field from .DOC write-protected, cannot be edited or de...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: All All
: medium normal
Assignee: Bernhard
URL:
Whiteboard: BSA target:6.1.0
Keywords: filter:doc, filter:docx
Depends on:
Blocks: DOCX-Fields 114537
  Show dependency treegraph
 
Reported: 2011-12-07 02:15 UTC by semianm@pokrok.cz
Modified: 2022-06-21 14:42 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Examle of converted MS Word document with 2 fields, mergefield and IF field (can`t be deleted). (25.54 KB, application/vnd.oasis.opendocument.text-flat-xml)
2011-12-07 02:15 UTC, semianm@pokrok.cz
Details
MS Word .doc with Conditional Field (19.50 KB, application/msword)
2012-01-22 23:51 UTC, semianm@pokrok.cz
Details
56010 .doc saved as .odt (9.43 KB, application/vnd.oasis.opendocument.text)
2012-01-22 23:52 UTC, semianm@pokrok.cz
Details
.doc with Fields saved as .odt under OOo 3.2.1 (8.39 KB, application/vnd.oasis.opendocument.text)
2012-01-25 06:42 UTC, famo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description semianm@pokrok.cz 2011-12-07 02:15:32 UTC
Created attachment 54173 [details]
Examle of converted MS Word document with 2 fields, mergefield and IF field (can`t be deleted).

Problem description: 

After converting MS Word document to odt, conditional fields can`t be deleted or modified. After saving as plain xml, I found this node causes the problem:

<field:fieldmark-start text:name="__Fieldmark__174_316795990" field:type=""/><field:fieldmark-end/>


Steps to reproduce:
1. Create MS Word document with conditional field "IF"
2. Open in LibreOffice Writer
3. try to edit field


Platform (if different from the browser): 
              
Windows
Comment 1 Thomas Hackert 2012-01-22 07:57:15 UTC
Hello Matěj, *,
I can confirm it with Debian Testing AMD64 and the Germanophone version of LO 3.5.0 RC1 ... :( If I choose to insert text in the marked field, I get the error message (roughly translated) "The cursor or the selection is in an write protected area. A change cannot be accepted." ... :(
HTH
Thomas.
Comment 2 famo 2012-01-22 13:10:33 UTC Comment hidden (obsolete)
Comment 3 semianm@pokrok.cz 2012-01-22 23:51:21 UTC
Created attachment 56010 [details]
MS Word .doc with Conditional Field
Comment 4 semianm@pokrok.cz 2012-01-22 23:52:58 UTC
Created attachment 56011 [details]
56010 .doc saved as .odt
Comment 5 famo 2012-01-25 06:18:32 UTC
Thanks Matěj.

OK, I can reproduce this now under LO 3.4 and 3.5.

However, notice that the problem is not within the conversion from .doc to odt., the field (and its whole paragraph) is already not editable in the .doc, if opened with LO 3.4/3.5.

I checked the .doc and your .odt also with OOo 3.2.1, in both cases the field text is editable - though the field is not recognized as a field but as simple text.

Setting Status to NEW
Adding Keyword regression (although I'm not so sure about it).
Comment 6 famo 2012-01-25 06:42:43 UTC
Created attachment 56144 [details]
.doc with Fields saved as .odt under OOo 3.2.1
Comment 7 sasha.libreoffice 2012-02-13 07:46:21 UTC
If in Word select "Show field codes" then it shows:
{ IF 1 = 1 "test1" "test2" \* MERGEFORMAT }
Comment 8 domingo.sacristan 2014-02-24 10:04:13 UTC
I can confirm this Bug, tested with Libreoffice 4.2.1
Comment 9 Joel Madero 2015-05-02 15:43:16 UTC Comment hidden (obsolete)
Comment 10 Phil Mayes 2015-10-16 19:41:41 UTC
I can confirm this bug is present in LibreOffice Writer 5.0.2.2 Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe Locale: en-US (en_US) on Windows 10 for the first two attachments, #54173, #56010.

I arrived here because my wife was running into "protected" fields in work forms she uses. Sometimes the problem would resolve, though we have not been able to identify the fix -- maybe save as, maybe copy, maybe copy and reopen, maybe POM.
Comment 11 Commit Notification 2017-12-14 12:26:38 UTC
Serge Krot committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=29378bd510226adb23659525203beec18f8708a3

tdf#43569 DOC input: insert ConditionalText field instead of field marks

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Timur 2017-12-15 10:34:20 UTC
Fileopen and DOC save as ODT looks fixed. 
Export DOC save as DOC/DOCX doesn't, can be another bug but please comment.
If another bug please mark this one as fixed.
Comment 13 Thorsten Behrens (allotropia) 2017-12-18 10:34:17 UTC
Yeah, lets mark this fixed, title says file open from .DOC - and have the export filter work as a separate task.
Comment 14 Timur 2017-12-21 11:10:15 UTC
Bug 114537.