tdf#43569 DOC input: insert ConditionalText field instead of field marks

In case of IF field input inside DOC document the ConditionalText field
should be created instead of the two field marks that leads to
handling of unsupported field routine.

Added unit tests.

Change-Id: I31875d8e6be7f536766ef640a366b843f7e0532c